include/xslp.h

typedef struct tagXSLPproblem *XSLPprob;
 
int XSLP_CC XSLPcascade( XSLPprob Prob);
 
int XSLP_CC XSLPconstruct( XSLPprob Prob);
 
int XSLP_CC XSLPcopycallbacks( XSLPprob Prob, const XSLPprob OldProb);
 
int XSLP_CC XSLPcopycontrols( XSLPprob NewProb, const XSLPprob OldProb);
 
int XSLP_CC XSLPcopyprob( XSLPprob NewProb, XSLPprob OldProb, const char * probname);
 
int XSLP_CC XSLPcreateprob( XSLPprob * Prob, XPRSprob * XprsProb);
 
int XSLP_CC XSLPdestroyprob( XSLPprob Prob);
 
int XSLP_CC XSLPfree();
 
int XSLP_CC XSLPgetdblattrib( XSLPprob Prob, int param, double * value);
 
int XSLP_CC XSLPgetdblcontrol( XSLPprob Prob, int Param, double * dValue);
 
int XSLP_CC XSLPgetintattrib( XSLPprob Prob, int Param, int * iValue);
 
int XSLP_CC XSLPgetintcontrol( XSLPprob Prob, int Param, int * iValue);
 
int XSLP_CC XSLPgetptrattrib( XSLPprob Prob, int param, void ** value);
 
int XSLP_CC XSLPgetslpsol( XSLPprob Prob, double * dx, double * dslack, double * dual, double * dj);
 
int XSLP_CC XSLPglobal( XSLPprob Prob);
 
int XSLP_CC XSLPinit();
 
int XSLP_CC XSLPmaxim( XSLPprob Prob, const char * Flags);
 
int XSLP_CC XSLPminim( XSLPprob Prob, const char * Flags);
 
int XSLP_CC XSLPopt( XSLPprob Prob, const char * Flags);
 
int XSLP_CC XSLPpostsolve( XSLPprob Prob);
 
int XSLP_CC XSLPpresolve( XSLPprob Prob);
 
int XSLP_CC XSLPreadprob( XSLPprob Prob, const char * probname, const char * flags);
 
int XSLP_CC XSLPremaxim( XSLPprob Prob, const char * Flags);
 
int XSLP_CC XSLPreminim( XSLPprob Prob, const char * Flags);
 
int XSLP_CC XSLPrestore( XSLPprob Prob, const char * ProbName);
 
int XSLP_CC XSLPrevise( XSLPprob Prob, const char * probname);
 
int XSLP_CC XSLPsave( XSLPprob Prob);
 
int XSLP_CC XSLPsaveas( XSLPprob Prob, const char * File);
 
int XSLP_CC XSLPsetdblcontrol( XSLPprob Prob, int Param, double dValue);
 
int XSLP_CC XSLPsetdefaultcontrol( XSLPprob Prob, int Param);
 
int XSLP_CC XSLPsetdefaults( XSLPprob Prob);
 
int XSLP_CC XSLPsetintcontrol( XSLPprob Prob, int Param, int iValue);
 
int XSLP_CC XSLPsetlogfile( XSLPprob Prob, const char * filename, int option);
 
int XSLP_CC XSLPsetparam( XSLPprob Prob, const char * Name, const char * Value);
 
int XSLP_CC XSLPsetstrcontrol( XSLPprob Prob, int Param, const char * cValue);
 
int XSLP_CC XSLPsetstring( XSLPprob Prob, int * Param, const char * cValue);
 
int XSLP_CC XSLPwriteprob( XSLPprob Prob, const char * filename, const char * flags);
 
int XSLP_CC XSLPsetcbcascadeend( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbcascadestart( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbcascadevar( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,int), void * Object);
 
int XSLP_CC XSLPsetcbcascadevarF( XSLPprob Prob, int (*UserFunc)(XSLPprob,void*,int*), void * Object);
 
int XSLP_CC XSLPsetcbconstruct( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbdestroy( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbformula( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,double,double*), void * Object);
 
int XSLP_CC XSLPsetcbintsol( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbiterend( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbiterstart( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbitervar( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,int), void * Object);
 
int XSLP_CC XSLPsetcbitervarF( XSLPprob Prob, int (*UserFunc)(XSLPprob,void*,int*), void * Object);
 
int XSLP_CC XSLPsetcbmessage( XSLPprob Prob, void (XSLP_CC *UserFunc)(XSLPprob,void*,char*,int,int), void * Object);
 
int XSLP_CC XSLPsetcbmessageF( XSLPprob Prob, void (*UserFunc)(XSLPprob,void*,char*,int*,int*), void * Object);
 
int XSLP_CC XSLPsetcboptnode( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,int*), void * Object);
 
int XSLP_CC XSLPsetcbprenode( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,int*), void * Object);
 
int XSLP_CC XSLPsetcbslpend( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbslpnode( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*,int*), void * Object);
 
int XSLP_CC XSLPsetcbslpstart( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);
 
int XSLP_CC XSLPsetcbinterrupt( XSLPprob Prob, int (XSLP_CC *UserFunc)(XSLPprob,void*), void * Object);