include/xslp.bas

Attribute VB_Name = "Xpress_SLP"
' Module XSLP.BAS
' Function and Constant declarations for use with
' Xpress SLP Runtime library
' Release version 1.42 Sept 2008
' (c) Copyright Fair Isaac Corporation 2008


Option Explicit
Option Compare Text


'****************************************************************************
' Redirection of IO
'****************************************************************************
Declare Function XSLPsetStream Lib "xprvb" Alias "_xvbsetstream@8" (ByVal what As Long, ByVal fname As String) As Long
Declare Function XSLPflush Lib "xprvb" Alias "_xvbflush@4" (ByVal what As Long) As Long
Declare Function XSLPclose Lib "xprvb" Alias "_xvbclose@4" (ByVal what As Long) As Long

'****************************************************************************
' Initialization/Finish
'****************************************************************************
Declare Function XSLPinit Lib "xslp" Alias "_XSLPinit@0" () As Long
Declare Function XSLPcreateprob Lib "xslp" Alias "_XSLPcreateprob@8" (ByRef xslp_prob As Long, ByRef Prob As Long) As Long
Declare Function XSLPreadprob Lib "xslp" Alias "_XSLPreadprob@12" (ByVal Prob As Long, ByVal probname As String, ByVal flags As String) As Long
Declare Function XSLPdestroyprob Lib "xslp" Alias "_XSLPdestroyprob@4" (ByVal Prob As Long) As Long
Declare Function XSLPfree Lib "xslp" Alias "_XSLPfree@0" () As Long

'****************************************************************************
'XSLPProb manipulation
'****************************************************************************
Declare Function XSLPwriteprob Lib "xslp" Alias "_XSLPwriteprob@12" (ByVal Prob As Long, ByVal FileName As String, ByVal flags As String) As Long
Declare Function XSLPsave Lib "xslp" Alias "_XSLPsave@4" (ByVal Prob As Long) As Long
Declare Function XSLPsaveas Lib "xslp" Alias "_XSLPsaveas@8" (ByVal Prob As Long, ByVal FileName As String) As Long
Declare Function XSLPrestore Lib "xslp" Alias "_XSLPrestore@8" (ByVal Prob As Long, ByVal probname As String) As Long
Declare Function XSLPcopyprob Lib "xslp" Alias "_XSLPcopyprob@12" (ByVal Prob As Long, ByVal oldprob As Long, ByVal probname As String) As Long
Declare Function XSLPcopycallbacks Lib "xslp" Alias "_XSLPcopycallbacks@8" (ByVal NewProb As Long, ByVal oldprob As Long) As Long
Declare Function XSLPcopycontrols Lib "xslp" Alias "_XSLPcopycontrols@8" (ByVal NewProb As Long, ByVal oldprob As Long) As Long
Declare Function XSLPcascade Lib "xslp" Alias "_XSLPcascade@4" (ByVal Prob As Long) As Long
Declare Function XSLPgetsol Lib "xslp" Alias "_XSLPgetsol@4" (ByVal Prob As Long) As Long
Declare Function XSLPgetslpsol Lib "xslp" Alias "_XSLPgetslpsol@20" (ByVal Prob As Long, ByRef dx As Double, ByRef dslack As Double, ByRef dual As Double, ByRef dj As Double) As Long
Declare Function XSLPconstruct Lib "xslp" Alias "_XSLPconstruct@4" (ByVal Prob As Long) As Long
Declare Function XSLPrevise Lib "xslp" Alias "_XSLPrevise@8" (ByVal Prob As Long, ByVal FileName As String) As Long

'****************************************************************************
' Attributes and control getting/setting
'****************************************************************************
Declare Function XSLPgetdblattrib Lib "xslp" Alias "_XSLPgetdblattrib@12" (ByVal Prob As Long, ByVal Param As Long, ByRef Value As Double) As Long
Declare Function XSLPgetdblcontrol Lib "xslp" Alias "_XSLPgetdblcontrol@12" (ByVal Prob As Long, ByVal Param As Long, ByRef dValue As Double) As Long
Declare Function XSLPgetintattrib Lib "xslp" Alias "_XSLPgetintattrib@12" (ByVal Prob As Long, ByVal Param As Long, ByRef iValue As Long) As Long
Declare Function XSLPgetintcontrol Lib "xslp" Alias "_XSLPgetintcontrol@12" (ByVal Prob As Long, ByVal Param As Long, ByRef iValue As Long) As Long
Declare Function XSLPsetdblcontrol Lib "xslp" Alias "_XSLPsetdblcontrol@16" (ByVal Prob As Long, ByVal Param As Long, ByVal dValue As Double) As Long
Declare Function XSLPsetintcontrol Lib "xslp" Alias "_XSLPsetintcontrol@12" (ByVal Prob As Long, ByVal Param As Long, ByVal iValue As Long) As Long
Declare Function XSLPsetstrcontrol Lib "xslp" Alias "_XSLPsetstrcontrol@12" (ByVal Prob As Long, ByVal Param As Long, ByVal cValue As String) As Long
Declare Function XSLPsetstring Lib "xslp" Alias "_XSLPsetstring@12" (ByVal Prob As Long, ByRef Param As Long, ByVal cValue As String) As Long
Declare Function XSLPgetptrattrib Lib "xslp" Alias "_XSLPgetptrattrib@12" (ByVal Prob As Long, ByVal Param As Long, ByRef pValue As Long) As Long
Declare Function XSLPsetdefaults Lib "xslp" Alias "_XSLPsetdefaults@4" (ByVal Prob As Long) As Long

Declare Function XSLPcontrolcode Lib "xslp" Alias "_XSLPcontrolcode@12" (ByRef Param As Long, ByVal Name As String, ByRef theType As Long) As Long
Declare Function XSLPsetdefaultcontrol Lib "xslp" Alias "_XSLPsetdefaultcontrol@8" (ByVal Prob As Long, ByVal Param As Long) As Long
Declare Function XSLPsetparam Lib "xslp" Alias "_XSLPsetparam@12" (ByVal Prob As Long, ByVal Name As String, ByVal Value As String) As Long

'****************************************************************************
' Solving
'****************************************************************************
Declare Function XSLPpresolve Lib "xslp" Alias "_XSLPpresolve@4" (ByVal Prob As Long) As Long
Declare Function XSLPmaxim Lib "xslp" Alias "_XSLPmaxim@8" (ByVal Prob As Long, ByVal flags As String) As Long
Declare Function XSLPminim Lib "xslp" Alias "_XSLPminim@8" (ByVal Prob As Long, ByVal flags As String) As Long
Declare Function XSLPopt Lib "xslp" Alias "_XSLPopt@8" (ByVal Prob As Long, ByVal flags As String) As Long
Declare Function XSLPremaxim Lib "xslp" Alias "_XSLPremaxim@8" (ByVal Prob As Long, ByVal flags As String) As Long
Declare Function XSLPreminim Lib "xslp" Alias "_XSLPreminim@8" (ByVal Prob As Long, ByVal flags As String) As Long
Declare Function XSLPpostsolve Lib "xslp" Alias "_XSLPpostsolve@4" (ByVal Prob As Long) As Long
Declare Function XSLPsetlogfile Lib "xslp" Alias "_XSLPsetlogfile@12" (ByVal Prob As Long, ByVal FileName As String, ByVal Options As Long) As Long
Declare Function XSLPglobal Lib "xslp" Alias "_XSLPglobal@4" (ByVal Prob As Long) As Long

'****************************************************************************
' callbacks
'****************************************************************************
Declare Function XSLPsetcbmessage Lib "xslp" Alias "_XSLPsetcbmessage@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbiterend Lib "xslp" Alias "_XSLPsetcbiterend@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbiterstart Lib "xslp" Alias "_XSLPsetcbiterstart@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbitervar Lib "xslp" Alias "_XSLPsetcbitervar@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbcascadestart Lib "xslp" Alias "_XSLPsetcbcascadestart@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbcascadevar Lib "xslp" Alias "_XSLPsetcbcascadevar@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbcascadeend Lib "xslp" Alias "_XSLPsetcbcascadeend@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbslpend Lib "xslp" Alias "_XSLPsetcbslpend@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbslpstart Lib "xslp" Alias "_XSLPsetcbslpstart@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbprenode Lib "xslp" Alias "_XSLPsetcbprenode@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbslpnode Lib "xslp" Alias "_XSLPsetcbslpnode@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbcascadevarF Lib "xslp" Alias "_XSLPsetcbcascadevarF@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbitervarF Lib "xslp" Alias "_XSLPsetcbitervarF@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbmessageF Lib "xslp" Alias "_XSLPsetcbmessageF@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbdestroy Lib "xslp" Alias "_XSLPsetcbdestroy@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbintsol Lib "xslp" Alias "_XSLPsetcbintsol@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcboptnode Lib "xslp" Alias "_XSLPsetcboptnode@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbinterrupt Lib "xslp" Alias "_XSLPsetcbinterrupt@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbpvprenode Lib "xslp" Alias "_XSLPsetcbpvprenode@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbpvoptsol Lib "xslp" Alias "_XSLPsetcbpvoptsol@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbpvintsol Lib "xslp" Alias "_XSLPsetcbpvintsol@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbpvpostnode Lib "xslp" Alias "_XSLPsetcbpvpostnode@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbconstruct Lib "xslp" Alias "_XSLPsetcbconstruct@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbformula Lib "xslp" Alias "_XSLPsetcbformula@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long

Declare Function XSLPsetcbthreadstart Lib "xslp" Alias "_XSLPsetcbthreadstart@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcbthreadend Lib "xslp" Alias "_XSLPsetcbthreadend@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcblogicalthreadstart Lib "xslp" Alias "_XSLPsetcblogicalthreadstart@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
Declare Function XSLPsetcblogicalthreadend Lib "xslp" Alias "_XSLPsetcblogicalthreadend@12" (ByVal Prob As Long, ByVal Address As Long, ByVal object As Long) As Long
